simplify benchmark classes