@@ -9,10 +9,12 @@ import org.openjdk.jmh.annotations.OutputTimeUnit;
 import org.openjdk.jmh.annotations.Scope;
 import org.openjdk.jmh.annotations.State;
 
-/** Benchmark double dot products
+// java -ea --illegal-access=warn -jar target/benchmarks.jar
+
+/** Benchmark double sums.
  * 
  * <pre>
- * java -ea -jar target\benchmarks.jar Dot
+ * java -ea -jar target\benchmarks.jar Sum
  * </pre>
  * @author palisades dot lakes at gmail dot com
  * @version 2019-04-02
@@ -21,13 +23,13 @@ import org.openjdk.jmh.annotations.State;
 @State(Scope.Thread)
 @BenchmarkMode(Mode.AverageTime)
 @OutputTimeUnit(TimeUnit.MILLISECONDS)
-public class Dot extends Base {
+public class L2 extends Base {
 
   @Benchmark
-  public final double dot () { 
+  public final double l2 () { 
     final double pred = 
-      a.clear().addProducts(x0,x1).doubleValue();
-    final double residual = trueDot - pred; 
+      a.clear().add2All(x0).add2All(x1).doubleValue();
+    final double residual = trueSum - pred; 
     return residual; }
 
   //--------------------------------------------------------------
